[package]
name = "middleman"
version = "0.1.0"
authors = ["sirkibsirkib <christopher.esterhuyse@gmail.com>"]
repository = "https://github.com/sirkibsirkib/middleman"
readme = "README.md"
keywords = ["network", "message", "serialization", "asynchronous"]
license-file = "LICENSE.md"


[dependencies]
mio = "0.6.14"
serde = "1.0.27"
serde_derive = "1.0.27"
bincode = "1.0.0"
byteorder = "1.2.2"