[package]
name = "middleman"
version = "0.3.1"
authors = ["sirkibsirkib <christopher.esterhuyse@gmail.com>"]
repository = "https://github.com/sirkibsirkib/middleman"
readme = "README.md"
keywords = ["network", "message", "serialization", "mio"]
description = "A wrapper for a mio::TcpStream to send and receive serializable Structs (blocking or non blocking) of arbitrary size"
license-file = "LICENSE.md"


[dependencies]
mio = "0.6.14"
serde = "1.0.27"
bincode = "1.0.0"
byteorder = "1.2.2"
# ringtail = "0.1"


[dev-dependencies]
serde_derive = "1.0.27"